@@ -4,6 +4,7 @@ Date: ????
   Info:
     - Do not check for held item every time the player moves
     - Track chunks the player has put his character/remote-view on
+    - Check all the chunks on screen
 ---------------------------------------------------------------------------------------------------
 Version: 0.0.1
 Date: 2024. 10. 25
